--- a/index.html
+++ b/index.html
@@ -348,27 +348,29 @@
 									</div>
 								</div>
 
-								<div class="main__footer__info__btn main__foter_first">
-									<h3 href="#" class="footer__headliner">NFT ART</h3>
-									<a href="#" class="nft__atr__info">Explore</p>
-									<a href="#" class="nft__atr__info">How it Works</a>
-									<a href="#" class="nft__atr__info">Contact Us</a>
-								</div>
+								<div class="fotter__low">
+									<div class="main__footer__info__btn ">
+										<h3 href="#" class="footer__headliner">Support</h3>
+										<a href="#" class="nft__atr__info">Help center</p>
+										<a href="#" class="nft__atr__info">Terms of service</a>
+										<a href="#" class="nft__atr__info">Legal</a>
+										<a href="#" class="nft__atr__info">Privacy policy</a>
+									</div>
+									
+									<div class="main__footer__info__btn">
+										<h3 href="#" class="footer__headliner">My Account</h3>
+										<a href="#" class="nft__atr__info">Profile</p>
+										<a href="#" class="nft__atr__info">Favorites</a>
+										<a href="#" class="nft__atr__info">My Collections</a>
+										<a href="#" class="nft__atr__info">Settings</a>
+									</div>
 
-								<div class="main__footer__info__btn">
-									<h3 href="#" class="footer__headliner">My Account</h3>
-									<a href="#" class="nft__atr__info">Profile</p>
-									<a href="#" class="nft__atr__info">Favorites</a>
-									<a href="#" class="nft__atr__info">My Collections</a>
-									<a href="#" class="nft__atr__info">Settings</a>
-								</div>
-
-								<div class="main__footer__info__btn">
-									<h3 href="#" class="footer__headliner">Support</h3>
-									<a href="#" class="nft__atr__info">Help center</p>
-									<a href="#" class="nft__atr__info">Terms of service</a>
-									<a href="#" class="nft__atr__info">Legal</a>
-									<a href="#" class="nft__atr__info">Privacy policy</a>
+									<div class="main__footer__info__btn">
+										<h3 href="#" class="footer__headliner">NFT ART</h3>
+										<a href="#" class="nft__atr__info">Explore</p>
+										<a href="#" class="nft__atr__info">How it Works</a>
+										<a href="#" class="nft__atr__info">Contact Us</a>
+									</div>
 								</div>
 
 							</div>
