--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</symbol>
 		<symbol id="twitter" viewBox="0 0 29 21">
 			<g>
-				<path d="M28.5703 2.74844C27.5432 3.15625 26.4487 3.42656 25.3077 3.55781C26.4815 2.92344 27.3774 1.92656 27.7986 0.725C26.7042 1.31562 25.4959 1.73281 24.2081 1.96563C23.1689 0.964063 21.6878 0.34375 20.0721 0.34375C16.9373 0.34375 14.4135 2.64688 14.4135 5.47031C14.4135 5.87656 14.4515 6.26719 14.5447 6.63906C9.83735 6.43125 5.67198 4.38906 2.87378 1.27813C2.38526 2.04531 2.09871 2.92344 2.09871 3.86875C2.09871 5.64375 3.10855 7.21719 4.61381 8.12812C3.70409 8.1125 2.81164 7.87344 2.05555 7.49688C2.05555 7.5125 2.05555 7.53281 2.05555 7.55312C2.05555 10.0437 4.01826 12.1125 6.59205 12.5891C6.13116 12.7031 5.62883 12.7578 5.10751 12.7578C4.745 12.7578 4.37904 12.7391 4.03553 12.6703C4.76917 14.7 6.85099 16.1922 9.32638 16.2406C7.39993 17.6047 4.95387 18.4266 2.30586 18.4266C1.8415 18.4266 1.39614 18.4078 0.950775 18.3563C3.45897 19.8203 6.43152 20.6562 9.6371 20.6562C20.0566 20.6562 25.7531 12.8438 25.7531 6.07187C25.7531 5.84531 25.7444 5.62656 25.7324 5.40938C26.8561 4.6875 27.8004 3.78594 28.5703 2.74844Z" fill=/>
+				<path d="M28.5703 2.74844C27.5432 3.15625 26.4487 3.42656 25.3077 3.55781C26.4815 2.92344 27.3774 1.92656 27.7986 0.725C26.7042 1.31562 25.4959 1.73281 24.2081 1.96563C23.1689 0.964063 21.6878 0.34375 20.0721 0.34375C16.9373 0.34375 14.4135 2.64688 14.4135 5.47031C14.4135 5.87656 14.4515 6.26719 14.5447 6.63906C9.83735 6.43125 5.67198 4.38906 2.87378 1.27813C2.38526 2.04531 2.09871 2.92344 2.09871 3.86875C2.09871 5.64375 3.10855 7.21719 4.61381 8.12812C3.70409 8.1125 2.81164 7.87344 2.05555 7.49688C2.05555 7.5125 2.05555 7.53281 2.05555 7.55312C2.05555 10.0437 4.01826 12.1125 6.59205 12.5891C6.13116 12.7031 5.62883 12.7578 5.10751 12.7578C4.745 12.7578 4.37904 12.7391 4.03553 12.6703C4.76917 14.7 6.85099 16.1922 9.32638 16.2406C7.39993 17.6047 4.95387 18.4266 2.30586 18.4266C1.8415 18.4266 1.39614 18.4078 0.950775 18.3563C3.45897 19.8203 6.43152 20.6562 9.6371 20.6562C20.0566 20.6562 25.7531 12.8438 25.7531 6.07187C25.7531 5.84531 25.7444 5.62656 25.7324 5.40938C26.8561 4.6875 27.8004 3.78594 28.5703 2.74844Z" />
 			</g>
 		</symbol>
 		<symbol id="tg" viewBox="0 0 29 21">
@@ -39,11 +39,16 @@
 				<path d="M11.5325 13.3036C12.3507 13.3036 13.017 12.6786 13.017 11.9077C13.017 11.1421 12.3553 10.5171 11.5371 10.5171L11.5325 10.5202C10.7142 10.5202 10.0479 11.1431 10.0479 11.914C10.0479 12.6786 10.7142 13.3036 11.5325 13.3036Z" />
 			</g>
 		</symbol>
+		<symbol id="header__search" viewBox="0 0 50 50">
+			<g>
+				<path d="M 21 3 C 11.621094 3 4 10.621094 4 20 C 4 29.378906 11.621094 37 21 37 C 24.710938 37 28.140625 35.804688 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460938 28.085938 38 24.222656 38 20 C 38 10.621094 30.378906 3 21 3 Z M 21 5 C 29.296875 5 36 11.703125 36 20 C 36 28.296875 29.296875 35 21 35 C 12.703125 35 6 28.296875 6 20 C 6 11.703125 12.703125 5 21 5 Z"/>
+			</g>
+		</symbol>
 	</svg>
 <!-- Sprite -->
 
 	<div class="container">
-		<div class="header">
+		<div class="header" id="header">
 			<div class="header__container">
 				<div class="site__name">
 					<div class="logo main__logo">
@@ -53,8 +58,8 @@
 					</div>
 					<h2 class="site__title">NFT ART</h2>
 				</div>
-				<form action="#" class="search">
-					   <p><input class="search__form" type="search" name="search" placeholder="Search to item here"> 
+				<form action="#" class="search" >
+					   	<p><input class="search__form" type="search" name="search" placeholder="Search to item here"> 
    						</p>
 				</form>	
 				<div class="menu">
@@ -65,8 +70,49 @@
 				<div class="menu__btn">
 					<a href="#"class="btn__items">Create</a>
 					<a href="#" class="btn__items">Connect</a>
-				</div>		
+				</div>
+				<div class="search__btn">
+					
+				</div>
+
+
+
+				<div class="hamburger-menu">
+				    <input id="menu__burger" type="checkbox" />
+				    <label class="menu__btn__burger" for="menu__burger">
+				      <span></span>
+				    </label>
+
+				    <ul class="menu__box">
+				      	<li><a class="menu__item" href="#">Explore</a></li>
+						<li><a class="menu__item" href="#">My items</a></li>
+						<li><a class="menu__item" href="#">Following</a></li>
+						<div class="btn__box">
+							<a href="#"class="burger__btn ">Create</a>						
+							<a href="#" class="burger__btn ">Connect</a>
+						</div>
+				    </ul>
+				</div>
+
+				<div class="header__search" id="">
+					<svg class="social__icons" id="search__icon">
+						<use xlink:href="#header__search"></use>
+					</svg>
+				</div>
+				
+
+
 			</div>
+			
+		</div>
+	</div>
+	<div class="container" >
+		<div class="search__wind" id="mobile__search__act">
+			
+			<form action="#" class="search__mob" >
+				<p><input id="search" class="search__mobile " type="search" name="search" placeholder="Search to item here"> 
+	   			</p>
+			</form>
 		</div>
 	</div>
 
@@ -400,6 +446,7 @@
 											<use xlink:href="#discord"></use>
 										</svg>
 									</div>
+
 								</div>
 							</div>
 						</div>	
