--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
 				<p><input id="search" class="search__mobile " type="search" name="search" placeholder="Search to item here"> 
 	   			</p>
 			</form>
+			<div class="close__search">
+				<span class="close__btn" id="close__btn"></span>
+			</div>
 		</div>
 	</div>
 
