--- a/index.html
+++ b/index.html
@@ -138,7 +138,18 @@
 									</div>
 								</div>
 							<div class="intro_phone">
-								
+								<div class="dots">
+									<span class="dotsss" style="--i:1;"></span>
+									<span class="dotsss" style="--i:2;"></span>
+									<span class="dotsss" style="--i:3;"></span>
+									<span class="dotsss" style="--i:4;"></span>
+									<span class="dotsss" style="--i:5;"></span>
+									<span class="dotsss" style="--i:6;"></span>
+									<span class="dotsss" style="--i:7;"></span>
+									<span class="dotsss" style="--i:8;"></span>
+									<span class="dotsss" style="--i:9;"></span>
+									<span class="dotsss" style="--i:10;"></span>
+								</div>
 								<div class="first__phone">
 									<img class="first__phone__size" src="img/first_phone.png">
 								</div>
